1. Added modt popular countries (United States, United Kingdom, India) to the top of the drop down list. 2. Displaying time in AM/PM format in update status page. 3. Setting the time zone value by default. 4. Alignment issue fixed for schedule and cancel button. 5. Manage social accounts page Now user is able to click anywhere of the tile to select or de-select the social account. 6. Manage social accounts page: Delete icon comes, when user mouse hovers on the social account. Delete icon kept to the top right.

--- a/src/app/social/common/update-status/update-status.component.css
+++ b/src/app/social/common/update-status/update-status.component.css
@@ -45,6 +45,7 @@ textarea {
 	display: inline-block
 }
 .fa-social {margin: 10px 10px 0 -10px}
+.fa-times-circle {cursor: pointer}
 
 .profile-box.checked {
 	background-color: #f7f7f7;
@@ -449,10 +450,6 @@ h4 {
 h5 {
 	display: inline;
 	font-weight: 600;
-}
-
-.btn {
-	min-width: 9.2em;
 }
 
 .profile-picture {
